--- a/app/views/review_labs/new.html.erb
+++ b/app/views/review_labs/new.html.erb
@@ -1,13 +1,17 @@
+<!--#研究室名を表示-->
 <%= @lab.name%>
 
+<!--#データを送信するためにフォーム化-->
 <%= form_tag("/review_labs/#{params[:lab_id]}/create") do %>
 
+<!-- #エラーメッセージ-->
     <% @review.errors.full_messages.each do |message| %>
         <div>
             <%= message %>
         </div>
     <% end %>
 
+    <!-- #各値の入力欄-->
     <div>
         user_name
         <textarea name="user_name"><%= @review.user_name %></textarea>
@@ -48,6 +52,7 @@
         <textarea name="free_review"><%= @review.free_review %></textarea>
     </div>
 
+    <!--#送信ボタン-->
     <div>
         <input type="submit", value="内容を確定して投稿する">
     </div>
