--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    
+    <!--ヘッダーのリンク-->
     <div>
       <%= link_to("トップページ", "/") %>
       <%= link_to("W-SHAREとは？", "/about") %>
@@ -17,8 +19,10 @@
       <%= link_to("研究室一覧", "/labs/index") %>
       <%= link_to("ご要望", "/requests/new") %>
     </div>
-
+    
+    <!--ヘッダーの下、コンテンツの上に一時的ナメッセージを表示-->
     <%= flash[:notice] %>
+
     <%= yield %>
   </body>
 </html>
