--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,11 +1,14 @@
+<!--ご要望フォーム-->
 <%= form_tag("/requests/create") do %>
 
+    <!--エラーメッセージの表示-->
     <% @request.errors.full_messages.each do |message| %>
         <div>
             <%= message %>
         </div>
     <% end %>
 
+    <!--#各値の入力欄-->
     <div>
         user_name
         <textarea name="user_name"><%= @request.user_name %></textarea>
@@ -21,6 +24,7 @@
         <textarea name="content"><%= @request.content %></textarea>
     </div>
 
+    <!--#送信ボタン-->
     <input type="submit" value="内容を確定して送信する">
 
 <% end %>
